# onitama

./: .gitignore  Cargo.toml
onitama_move_gen/: Cargo.toml  build.rs
onitama_move_gen/benches/: bench_gen.rs  bench_ops.rs  bench_perft.rs
onitama_move_gen/src/: eval.rs  gen.rs  lib.rs  ops.rs  perft.rs  tablebase.rs
onitama_move_gen_2/: Cargo.toml
onitama_move_gen_2/src/: card.rs  for_each_iter.rs  forward.rs  lib.rs  perft.rs  player.rs  side.rs  state.rs
onitama_move_gen_2/src/for_each_iter/: map.rs  mod.rs  wrap.rs
proof_number_graph/: Cargo.toml  build.rs
proof_number_graph/gltests/: main.rs
proof_number_graph/src/: bdd.rs  extra.rs  lib.rs  sdd.rs  sdd_ptr.rs  tb.rs
proof_number_search/: Cargo.toml
proof_number_search/src/: lib.rs  solver.rs
src/: agent.rs  connection.rs  main.rs  messages.rs  node.rs  transpose.rs
