[package]
name = "onitama_move_gen"
version = "0.1.0"
authors = ["Hytak <lhc.holten@gmail.com>"]
edition = "2018"

[lib]

[profile.bench]
debug = true
lto = "thin"

[profile.release]
debug = true
lto = "thin"
codegen-units = 1

[dependencies]
bitintr = "0.3.0"
build_const = "0.2.2"
num-traits = "0.2.14"
nudge = { version = "0.2.1", features = ["nightly"] }

[dev-dependencies]
criterion = "0.3.3"

[build-dependencies]
build_const = "0.2.1"
fastrand = "1.4.0"

# [[bench]]
# name = "bench_ops"
# harness = false

# [[bench]]
# name = "bench_gen"
# harness = false

[[bench]]
name = "bench_perft"
harness = false
