[package]
name = "proof_number_graph"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bigint = "4.4.3"
seq-macro = "0.3.0"

[build-dependencies]
build_const = "0.2.2"

[[test]]
name = "gltests"
path = "gltests/main.rs"
harness = false